# WSA

./: CMakeLists.txt
WSA_EDPFSP/: CMakeLists.txt  Globals.cpp  Globals.h  Instance.cpp  Instance.h  Main.cpp  Main.h  Random.h  Solution.cpp  Solution.h  WSA_EDPFSP.cpp  WSA_EDPFSP.h  test.py
WSA_EDPFSP/final_instances/instances/: 100_2_10_0.txt  100_2_10_1.txt  100_2_10_2.txt  100_2_10_3.txt  100_2_10_4.txt  100_2_10_5.txt  100_2_10_6.txt  100_2_10_7.txt  100_2_10_8.txt  100_2_10_9.txt  100_2_20_0.txt  100_2_20_1.txt  100_2_20_2.txt  100_2_20_3.txt  100_2_20_4.txt  100_2_20_5.txt  100_2_20_6.txt  100_2_20_7.txt  100_2_20_8.txt  100_2_20_9.txt  100_2_5_0.txt  100_2_5_1.txt  100_2_5_2.txt  100_2_5_3.txt  100_2_5_4.txt  100_2_5_5.txt  100_2_5_6.txt  100_2_5_7.txt  100_2_5_8.txt  100_2_5_9.txt  100_3_10_0.txt  100_3_10_1.txt  100_3_10_2.txt  100_3_10_3.txt  100_3_10_4.txt  100_3_10_5.txt  100_3_10_6.txt  100_3_10_7.txt  100_3_10_8.txt  100_3_10_9.txt  (+680 more)
WSA_EDPFSP/final_instances/test/: 100_2_10_0.txt  100_2_20_0.txt  100_2_5_0.txt  100_3_10_0.txt  (+68 more)
WSA_EDPFSP/instances/: 100_2_10.txt  100_2_5.txt  100_3_10.txt  100_3_5.txt  100_4_10.txt  100_4_5.txt  100_5_10.txt  100_5_5.txt  20_2_10.txt  20_2_5.txt  20_3_10.txt  20_3_5.txt  20_4_10.txt  20_4_5.txt  20_5_10.txt  20_5_5.txt  40_2_10.txt  40_2_5.txt  40_3_10.txt  40_3_5.txt  40_4_10.txt  40_4_5.txt  40_5_10.txt  40_5_5.txt  60_2_10.txt  60_2_5.txt  60_3_10.txt  60_3_5.txt  60_4_10.txt  60_4_5.txt  60_5_10.txt  60_5_5.txt  80_2_10.txt  80_2_5.txt  80_3_10.txt  80_3_5.txt  80_4_10.txt  80_4_5.txt  80_5_10.txt  80_5_5.txt
